# vcpkgAndroidTest

./: .gitignore  README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  vcpkg.json
app/src/main/java/org/agpl/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
